--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,7 @@
 <form action="" class="search-form">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search git users with username">
+    <input type="text" class="form-control" placeholder="Search git users with username" [(ngModel)]="username" name="username"
+    (keyup)="findProfile()">
   </div>
 </form>
 <div *ngIf = "profile">
