styling with bootstrap

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -25,6 +25,7 @@
             <li class="list-group-item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a></li>
           </ul>
         </div>
+        <div class="container-fluid">
         <div class="col-sm-4">
           <div>
             <p>
@@ -48,6 +49,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
