--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -29,10 +29,10 @@
         <div class="col-sm-4">
           <div>
             <p>
-              <span class="label label-default">{{profile.followers}} followers</span>
-              <span class="label label-primary">Following {{profile.following}} </span>
-              <span class="btn btn-primary btn-sm">{{profile.public_gists}} Public gists</span>
-              <span class="btn btn-success btn-sm">{{profile.public_repos}} Public Repos</span>
+              <span class="btn btn-info btn-lg">{{profile.followers}} followers</span>
+              <span class="btn btn-danger btn-lg">Following {{profile.following}} </span>
+              <span class="btn btn-primary btn-lg">{{profile.public_gists}} Public gists</span>
+              <span class="btn btn-success btn-lg">{{profile.public_repos}} Public Repos</span>
             </p>
             <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm">View profile on github</a></p>
             <div class="panel panel-default">
