modidify the form

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -37,11 +37,11 @@
             <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm">View profile on github</a></p>
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h1 class="panel-title">Repos</h1>
+                <h1 class="panel-title">Repositories</h1>
               </div>
               <div class="panel-body" *ngFor="let repo of repos">
                 <p class="clear-fix"> 
-                  {{repo.name}} <a href="{{repo.html_url}}" target="_black" class="btn btn-lg btn-warning pull-right"> view this project on git hub></a>
+                  {{repo.name}} <a href="{{repo.html_url}}" target="_black" class="btn btn-lg btn-warning pull-right"> view this project on git hub</a>
                   
                 </p>
                 <p>{{repo.description}}</p>
