--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -34,7 +34,7 @@
               <span class="btn btn-primary btn-lg">{{profile.public_gists}} Public gists</span>
               <span class="btn btn-success btn-lg">{{profile.public_repos}} Public Repos</span>
             </p>
-            <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm">View profile on github</a></p>
+            <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-lg">View profile on github</a></p>
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h1 class="panel-title">Repositories</h1>
